--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,4 +24,11 @@
         <item name="android:progressDrawable">@drawable/circle_progress</item>
     </style>
 
+    <style name="expandedBarTextStyle" parent="Theme.MovieApp">
+        <!-- Customize your theme here. -->
+        <item name="android:textSize">0sp</item>
+        <item name="android:textColor">@android:color/transparent</item>
+        <item name="fontFamily">@font/aldrich</item>
+    </style>
+
 </resources>
