--- a/app/src/main/res/layout/activity_see_all_movie.xml
+++ b/app/src/main/res/layout/activity_see_all_movie.xml
@@ -6,6 +6,7 @@
     android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backGround"
     tools:context=".ui.activity.SeeAllMovieActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -32,6 +33,8 @@
                 android:gravity="center"
                 android:textSize="20sp"
                 android:fontFamily="@font/aldrich"
+                app:layout_collapseMode="none"
+                android:keepScreenOn="false"
                 />
 
             <androidx.appcompat.widget.Toolbar
@@ -52,6 +55,8 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         >
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_gravity="center_horizontal"
+            tools:listitem="@layout/single_movie_see_all"
             android:id="@+id/recyclerView_seeAllMovies"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
