--- a/app/src/main/res/layout/activity_see_all_movie.xml
+++ b/app/src/main/res/layout/activity_see_all_movie.xml
@@ -9,58 +9,31 @@
     android:background="@color/backGround"
     tools:context=".ui.activity.SeeAllMovieActivity">
 
+
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout_seeAllMovies"
         android:layout_width="match_parent"
-        android:layout_height="256dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-        <!--CollapsingToolbar goes here-->
-
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsingToolbar_seeAllMovies"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        android:layout_height="wrap_content">
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar_seeAllMovies"
+            app:title="Popular Movies"
+            app:titleTextColor="@color/white"
+            app:titleTextAppearance="@style/titleAppBar"
             android:background="@color/backGround"
-            app:expandedTitleTextAppearance="@style/expandedBarTextStyle"
-            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
-
-            <TextView
-                android:id="@+id/textTitle_seeAllMovies"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Popular Movies"
-                android:gravity="center"
-                android:textSize="20sp"
-                android:fontFamily="@font/aldrich"
-                app:layout_collapseMode="none"
-                android:keepScreenOn="false"
-                />
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar_seeAllMovies"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:titleTextColor="@android:color/white"/>
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
     </com.google.android.material.appbar.AppBarLayout>
-
-
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        >
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_gravity="center_horizontal"
-            tools:listitem="@layout/single_movie_see_all"
             android:id="@+id/recyclerView_seeAllMovies"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
+            android:layout_gravity="center_horizontal"
+            tools:listitem="@layout/single_movie_see_all" />
     </androidx.core.widget.NestedScrollView>
 
 
