--- a/app/src/main/res/layout/activity_see_all_movie.xml
+++ b/app/src/main/res/layout/activity_see_all_movie.xml
@@ -11,6 +11,7 @@
 
 
     <com.google.android.material.appbar.AppBarLayout
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <com.google.android.material.appbar.MaterialToolbar
