--- a/app/src/main/res/layout/single_movie_see_all.xml
+++ b/app/src/main/res/layout/single_movie_see_all.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardBackgroundColor="@color/backGround"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="0dp"
-    android:layout_marginRight="5dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp"
+    android:background="@color/backGround"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="200dp">
 
-
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        app:cardBackgroundColor="@color/backGround"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="0dp"
+        >
     <ImageView
         android:id="@+id/imageView_single_movie_seeAll"
         android:layout_width="match_parent"
         android:src="@drawable/poster"
         android:layout_height="wrap_content"
          />
+    </androidx.cardview.widget.CardView>
 
-
-</androidx.cardview.widget.CardView>
+</LinearLayout>
