--- a/app/src/main/res/layout/single_movie_see_all.xml
+++ b/app/src/main/res/layout/single_movie_see_all.xml
@@ -5,15 +5,15 @@
     android:background="@color/backGround"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:layout_marginRight="5dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
     android:layout_height="200dp">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
         app:cardBackgroundColor="@color/backGround"
         app:cardCornerRadius="8dp"
         app:cardElevation="0dp"
