--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -11,8 +11,8 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="200dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="200dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="250dp"
         android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,13 +20,12 @@
 
 
     <TextView
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/aldrich"
+        android:textStyle="bold"
         android:text="Fliq."
         android:gravity="center"
-        android:layout_marginTop="20dp"
         android:textColor="@color/primary"
         android:textSize="30sp"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
