--- a/app/src/main/res/layout/single_movie_see_all.xml
+++ b/app/src/main/res/layout/single_movie_see_all.xml
@@ -12,7 +12,7 @@
     android:layout_height="200dp">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/backGround"
         app:cardCornerRadius="8dp"
