--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -126,6 +126,7 @@
                     android:layout_weight="1" />
 
                 <TextView
+                    android:id="@+id/topRated_MovieSeeAll_movieFrag"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
